k8s/gateway-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: gateway-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      component: gateway
  template:
    metadata:
      labels:
        component: gateway
    spec:
      containers:
        - name: gateway
          image: ahmedsheha/gateway
          ports:
            - containerPort: 4000
