k8s/servicea-cluster-ip-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: servicea-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: servicea
  ports:
    - port: 4001
      targetPort: 4001
