k8s/serviceb-cluster-ip-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: serviceb-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: serviceb
  ports:
    - port: 4002
      targetPort: 4002
